Start bio and added color scheme handling

--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
 	<meta name="creator" content="ASoftGlow">
 	<meta name="description" content="ASoftGlow's developer portfolio.">
 
+	<meta name="theme-color" media="(prefers-color-scheme: light)" content="hsl(130, 33%, 66%)" />
+	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="hsl(130, 20%, 33%)" />
+
 	<link rel="shortcut icon" href="assets/favicon.ico">
 	<link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
 	<main>
-		<h1 id="title">I'm ASoftGlow.</h1>
+		<h2 id="suptitle">I'm</h2>
+		<h1 id="title"><span>A</span>Sof<span>t</span>Glow</h1>
+		<div class="bio">
+			<p>A highschool student who dappels in coding. </p>
+			<p>I've messed around in
+				<b>web design</b>, <b>Python</b>, <b>Typescript</b>, and <b>C & C++</b>.
+			</p>
+		</div>
 	</main>
+	<footer>
+		<ins>This site is currently WIP</ins>
+	</footer>
 </body>
 
 </html>
