Added font Styled timeline Progress on website & menyow Swapped favicon .ico for .png

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
 	<meta charset="utf-8">
@@ -15,24 +15,66 @@
 	<meta name="theme-color" media="(prefers-color-scheme: light)" content="hsl(130, 33%, 66%)" />
 	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="hsl(130, 20%, 33%)" />
 
-	<link rel="shortcut icon" href="assets/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.png">
+	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="preload" href="fonts/Moderne Sans Font.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+	<script src="scripts/index.js" defer></script>
 </head>
 
 <body>
 	<main>
 		<h2 id="suptitle">I'm</h2>
 		<h1 id="title"><span>A</span>Sof<span>t</span>Glow</h1>
-		<div class="bio">
+		<div id="bio">
 			<p>A highschool student who dappels in coding. </p>
 			<p>I've messed around in
 				<b>web design</b>, <b>Python</b>, <b>Typescript</b>, and <b>C & C++</b>.
 			</p>
 		</div>
+		<div class="dotted divider"></div>
+		<div class="elv-wrapper" id="sign">
+			<h3 class="elevation elv-title">Projects</h3>
+			<div class="elevation elv-content">
+				<ul>
+					<li>
+						<a href="menyow.html">Discord bot</a>
+					</li>
+					<li>
+						<a href="terrain.html">Terrain generator</a>
+					</li>
+					<li>
+						<a href="cat-generator.html">Cat pixel art generator</a>
+					</li>
+					<li>
+						<a href="website.html">Website</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</main>
 	<footer>
-		<ins>This site is currently WIP</ins>
+		<p>© 2023 ASoftGlow</p>
+		<a href="mailto:me@asoftglow.dev" style="display: flex;column-gap: 1ch;">
+            <svg class="icon" id="email" width="1em" viewBox="1.25 -0.75 17.5 12.5">
+                <g stroke="currentColor" stroke-width="1.1" fill="none">
+                    <path d="M18,0 L10,8 L2,0 Z M2,0 L2,11 L18,11 L18,0 Z"></path>
+                </g>
+            </svg>
+            Contact
+        </a>
+		<p>This site is currently WIP</p>
 	</footer>
+    <svg id="hair" width="90" height="30" style="display: none;" aria-hidden="true" hidden>
+        <defs>
+            <linearGradient id="grad">
+                <stop offset="0%" stop-color="#222" />
+                <stop offset="30%" stop-opacity="0.6" />
+                <stop offset="95%" stop-opacity="0" />
+            </linearGradient>
+        </defs>
+        <path d="M 0 0 C 0 0, 2 25, 90 20" fill="transparent" stroke="url(#grad)" stroke-width="0.1mm" />
+    </svg>
 </body>
 
 </html>
