Progress on terrain & fixed typo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="preload" href="fonts/Moderne Sans Font.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-	<script src="scripts/index.js" defer></script>
 </head>
 
 <body>
@@ -27,9 +26,9 @@
 		<h2 id="suptitle">I'm</h2>
 		<h1 id="title"><span>A</span>Sof<span>t</span>Glow</h1>
 		<div id="bio">
-			<p>A highschool student who dappels in coding. </p>
-			<p>I've messed around in
-				<b>web design</b>, <b>Python</b>, <b>Typescript</b>, and <b>C & C++</b>.
+			<p>A highschool student who dabbles in programming.</p>
+			<p>I've messed around with
+				<b>web design</b>, <b>Python</b>, <br><b>Typescript</b>, and <b>C & C++</b>.
 			</p>
 		</div>
 		<div class="dotted divider"></div>
@@ -56,25 +55,15 @@
 	<footer>
 		<p>© 2023 ASoftGlow</p>
 		<a href="mailto:me@asoftglow.dev" style="display: flex;column-gap: 1ch;">
-            <svg class="icon" id="email" width="1em" viewBox="1.25 -0.75 17.5 12.5">
-                <g stroke="currentColor" stroke-width="1.1" fill="none">
-                    <path d="M18,0 L10,8 L2,0 Z M2,0 L2,11 L18,11 L18,0 Z"></path>
-                </g>
-            </svg>
-            Contact
-        </a>
+			<svg class="icon" id="email" width="1em" viewBox="1.25 -0.75 17.5 12.5">
+				<g stroke="currentColor" stroke-width="1.1" fill="none">
+					<path d="M18,0 L10,8 L2,0 Z M2,0 L2,11 L18,11 L18,0 Z"></path>
+				</g>
+			</svg>
+			Contact
+		</a>
 		<p>This site is currently WIP</p>
 	</footer>
-    <svg id="hair" width="90" height="30" style="display: none;" aria-hidden="true" hidden>
-        <defs>
-            <linearGradient id="grad">
-                <stop offset="0%" stop-color="#222" />
-                <stop offset="30%" stop-opacity="0.6" />
-                <stop offset="95%" stop-opacity="0" />
-            </linearGradient>
-        </defs>
-        <path d="M 0 0 C 0 0, 2 25, 90 20" fill="transparent" stroke="url(#grad)" stroke-width="0.1mm" />
-    </svg>
 </body>
 
 </html>
