--- a/website.html
+++ b/website.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="referrer" content="no-referrer">
 
-    <title>ASoftGlow.dev | About</title>
+    <title>ASoftGlow.dev</title>
     <meta name="author" content="ASoftGlow">
     <meta name="creator" content="ASoftGlow">
     <meta name="description" content="ASoftGlow's developer portfolio.">
