Made webmanifest path relative

--- a/hlp/index.html
+++ b/hlp/index.html
@@ -5,7 +5,7 @@
     <title>Line Picker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
-    <link rel="manifest" href="/index.webmanifest">
+    <link rel="manifest" href="index.webmanifest">
     <link rel="icon" href="imgs/puck.svg">
     <style>
         main {
