Clear storage when players are imported

--- a/hlp/index.html
+++ b/hlp/index.html
@@ -379,6 +379,7 @@
             localStorage.setItem("players", players.join("\n"));
 
             reset();
+            clearPos();
         }
 
         function loadData() {
