Added hockey line picker page

--- a/cat-generator.html
+++ b/cat-generator.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/cat-generator.css">
     <script src="scripts/index.js" defer></script>
-    <script src="scripts/cat-generator.js" defer></script>
 </head>
 
 <body>
@@ -43,18 +42,8 @@
             </svg>
             Contact
         </a>
-        <p>This site is currently WIP</p>
+        <p>This site is WIP</p>
     </footer>
-    <svg id="hair" width="90" height="30" style="display: none;" aria-hidden="true" hidden>
-        <defs>
-            <linearGradient id="grad">
-                <stop offset="0%" stop-color="#222" />
-                <stop offset="30%" stop-opacity="0.6" />
-                <stop offset="95%" stop-opacity="0" />
-            </linearGradient>
-        </defs>
-        <path d="M 0 0 C 0 0, 2 25, 90 20" fill="transparent" stroke="url(#grad)" stroke-width="0.1mm" />
-    </svg>
 </body>
 
 </html>
