--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <body>
 	<main>
 		<h2 id="suptitle">I'm</h2>
-		<h1 id="title"><span>A</span>Sof<span>t</span>Glow</h1>
+		<h1 id="title">A Soft Glow</h1>
 		<div id="bio">
 			<p>A highschool student who dabbles in programming.</p>
 			<p>I've messed around with
-				<b>web design</b>, <b>Python</b>, <br><b>Typescript</b>, and <b>C & C++</b>.
+				<b>web design</b>, <b>Python</b>, <br><b>Typescript</b>, <b>C#</b>, and <b>C & C++</b>.
 			</p>
 		</div>
 		<div class="dotted divider"></div>
@@ -43,10 +43,13 @@
 						<a href="terrain.html">Terrain generator</a>
 					</li>
 					<li>
-						<a href="cat-generator.html">Cat pixel art generator</a>
+						Cat pixel art generator
 					</li>
 					<li>
 						<a href="website.html">Website</a>
+					</li>
+					<li>
+						<a href="hockey.html">Hockey line picker</a>
 					</li>
 				</ul>
 			</div>
@@ -62,7 +65,7 @@
 			</svg>
 			Contact
 		</a>
-		<p>This site is currently WIP</p>
+		<p>This site is WIP</p>
 	</footer>
 </body>
 
