--- a/terrain.html
+++ b/terrain.html
@@ -111,7 +111,7 @@
 
                 <figure>
                     <img width="32px" src="images/glowsave.ico" alt="glowsave icon" style="image-rendering: pixelated;">
-                    <figcaption><code>.glowsave</code> file type icon</figcaption>
+                    <figcaption style="display: inline-block;"><code>.glowsave</code> file type icon</figcaption>
                 </figure>
                 <details open style="position: relative;">
                     <summary><code>.glowsave</code> byte format</summary>
@@ -186,7 +186,7 @@
             </svg>
             Contact
         </a>
-        <p>This site is currently WIP</p>
+        <p>This site is WIP</p>
     </footer>
 </body>
 
