Improved performance and meta data

--- a/hlp/index.html
+++ b/hlp/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <title>Line Picker</title>
+    <meta name="description" content="Simple tool for creating hockey lineups.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
+    <meta name="theme-color" content="#8676c0">
     <link rel="manifest" href="index.webmanifest">
     <link rel="icon" href="imgs/puck.svg">
     <link rel="stylesheet" href="index.css">
@@ -46,7 +48,7 @@
                 <div>
                     <div id="rost-cont">
                         <p>Roster</p>
-                        <ul id="roster"></ul>
+                        <div id="roster"></div>
                     </div>
                 </div>
                 <div id="ld">
