Updated HLP page with info on its practice page

--- a/hockey.html
+++ b/hockey.html
@@ -99,6 +99,17 @@
                     <img src="images/hockey/display.png" width="250px">
                     <figcaption>New display screen</figcaption>
                 </figure>
+                <h3>Practice</h3>
+                <p>
+                    Upon request, I later added a page to assist in team selection for practice games.
+                    Similar to the main page, a roster is located on the left and selects on the right.
+                    Choose the players for each team and optionally a team color.
+                </p>
+                <figure>
+                    <img src="images/hockey/practice.png" width="250px">
+                    <figcaption>Practice page. It looks different than the other screenshots because FireFox was used.</figcaption>
+                </figure>
+                <ins>Note: the selections on this page are not saved and do not affect the main page.</ins>
             </section>
         </main>
     </div>
