[hlp] Made more friendly to mobile

--- a/hlp/practice.html
+++ b/hlp/practice.html
@@ -22,7 +22,7 @@
     <main>
         <section id="edit-page" style="display: block;">
             <div class="cont">
-                <div>
+                <div id="rost-cont-cont">
                     <div id="rost-cont">
                         <p>Roster</p>
                         <div id="roster" style="height: 335px;"></div>
